# user_registration_back

./: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  filebeat.yml  linter.txt  pyproject.toml  pyproject_black.toml  requirements.txt  scripts.py  uwsgi.ini
.github/workflows/: CI.yml  flake8.yml  pylint.yml
app/: __init__.py  __main__.py
app/v1/: module.py
app/v1/api/: __init__.py
app/v1/api/docs/: views.py
app/v1/api/invoices/: views.py
app/v1/api/ping/: views.py
app/v1/api/users/: utils.py  views.py
app/v1/clients/: __init__.py
app/v1/clients/pos_system/: base.py  dummy.py  pirpos.py  utils.py
app/v1/models/: __init__.py  client.py  invoice.py  product.py
app/v1/use_cases/: __init__.py  invoices_manager.py  users_manager.py
app/v1/utils/: errors.py  utils.py
docs/: openapi.yaml
docs/styles/: styles.css
nginx/: default.conf
tests/: conftest.py
tests/v1/api/ping/: test_views.py
