[tool.poetry]
name = "app"
version = "0.1.0"
description = "Flask backend to manage user registration process"
authors = ["Julian Herrera <julianherrerab95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
flask-injector = "^0.15.0"
uwsgi = "^2.0.28"
requests = "^2.32.3"
flask-cors = "^5.0.1"
pydantic = "^2.10.6"
email-validator = "^2.2.0"
debugpy = "^1.8.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-flask = "^1.3.0"
python-lsp-server = {extras = ["all"], version = "^1.12.2"}
pylsp-mypy = "^0.7.0"
python-lsp-black = "^2.0.0"
types-requests = "^2.32.0.20250306"
flake8 = "^7.1.2"
poetry-plugin-export = "^1.9.0"

[tool.poetry.scripts]
generate-requirements = "scripts:generate_requirements"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 140
disable = [
    "R0903",  # number of methods
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
